[package]
name = "snake-game-wasm"
version = "0.1.0"
authors = ["ravi0the0sun <punravi73@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
piston = "0.52.0"
piston2d-graphics = "0.37.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"
